// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`with costs hidden, tokens take their place: heat map, ratios, card and table 1`] = `
" tokenhud   1 Overview   2 History   3 Models   4 Accounts                           scope all accounts ▾   ● live · 5s 
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                                        
 LAST 26 WEEKS · daily tokens        less ■ ■ ■ ■ ■ more   ╭─ Thu Dec 3 · today ───────────────────────────────────────╮
             Jul     Aug       Sep     Oct     Nov         │ tokens   1.6M   0.7× your 30-day avg                      │
 Mon ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │          in 95K · out 43K · cache 1.5M                    │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ models   claude-sonnet-4-6 67% · gpt-5.5 33%              │
 Wed ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ accounts personal 1.1M · codex 547K                       │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ limits   work weekly passed 80% at 09:05                  │
 Fri ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     │          personal 5h hit 100% at 10:02 (waited 1h18m)     │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     │ tab table · ←/→ week · ↑/↓ day                            │
 Sun ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     ╰───────────────────────────────────────────────────────────╯
                                                                                                                        
  Day   Week   Month     This week   This month                                                                / filter 
 date         input  output    cache   tokens vs 30-day avg            top model         accounts                       
 Thu Dec 3      95K     43K     1.5M     1.6M ━━━━━━━━━━━━━━━━━━  0.7× claude-sonnet-4-6 personal, codex                
 Wed Dec 2     170K     78K     3.3M     3.5M ━━━━━━━━━━━━━━━━━━  1.6× claude-opus-4-8   personal, work, codex          
 Tue Dec 1     181K     83K     3.0M     3.2M ━━━━━━━━━━━━━━━━━━  1.5× claude-sonnet-4-6 personal, work, codex          
 Mon Nov 30     35K     24K     939K     998K ━━━━━━━━━━━━━━━━━━  0.5× claude-sonnet-4-6 work                           
 Sun Nov 29       0       0        0        0 ━━━━━━━━━━━━━━━━━━  0.0×                                                  
 Sat Nov 28    144K     72K     2.8M     3.0M ━━━━━━━━━━━━━━━━━━  1.4× gpt-5.5           codex, work                    
 Fri Nov 27    173K     67K     3.0M     3.3M ━━━━━━━━━━━━━━━━━━  1.5× claude-mystery-9  personal, work                 
 Thu Nov 26     75K     30K     1.3M     1.4M ━━━━━━━━━━━━━━━━━━  0.6× claude-mystery-9  work, personal                 
 Wed Nov 25    105K     51K     1.5M     1.7M ━━━━━━━━━━━━━━━━━━  0.8× gpt-5.5           codex, personal                
 Tue Nov 24     78K     31K     1.5M     1.6M ━━━━━━━━━━━━━━━━━━  0.7× gpt-5.6-sol       codex                          
 Mon Nov 23    182K     93K     4.0M     4.3M ━━━━━━━━━━━━━━━━━━  1.9× gpt-5.5           codex, work, personal          
 Sun Nov 22    158K     67K     2.4M     2.7M ━━━━━━━━━━━━━━━━━━  1.2× claude-haiku-4-5  personal, work                 
 Sat Nov 21     48K     19K     735K     802K ━━━━━━━━━━━━━━━━━━  0.4× gpt-5.6-sol       codex                          
 Fri Nov 20     89K     45K     1.8M     1.9M ━━━━━━━━━━━━━━━━━━  0.9× gpt-5.5           codex, personal, work          
 Thu Nov 19    236K    106K     4.4M     4.8M ━━━━━━━━━━━━━━━━━━  2.2× claude-mystery-9  codex, work, personal          
 Wed Nov 18    194K     79K     3.9M     4.2M ━━━━━━━━━━━━━━━━━━  1.9× claude-sonnet-4-6 personal, work, codex          
 Tue Nov 17     81K     38K     1.9M     2.0M ━━━━━━━━━━━━━━━━━━  0.9× claude-mystery-9  work, personal                 
 Mon Nov 16     40K     16K     423K     478K ━━━━━━━━━━━━━━━━━━  0.2× claude-mystery-9  personal                       
 Sun Nov 15       0       0        0        0 ━━━━━━━━━━━━━━━━━━  0.0×                                                  
 Sat Nov 14    116K     51K     2.3M     2.4M ━━━━━━━━━━━━━━━━━━  1.1× claude-mystery-9  personal                       
 Fri Nov 13    211K     98K     3.8M     4.2M ━━━━━━━━━━━━━━━━━━  1.9× gpt-5.6-sol       codex, personal, work          
 Thu Nov 12    146K     78K     2.8M     3.1M ━━━━━━━━━━━━━━━━━━  1.4× claude-haiku-4-5  personal, work, codex          
 Wed Nov 11     97K     47K     1.9M     2.0M ━━━━━━━━━━━━━━━━━━  0.9× gpt-5.5           work, codex                    
 Tue Nov 10    116K     49K     2.2M     2.4M ━━━━━━━━━━━━━━━━━━  1.1× claude-mystery-9  personal, codex                
 Mon Nov 9      77K     34K     1.3M     1.4M ━━━━━━━━━━━━━━━━━━  0.7× gpt-5.6-sol       codex, work                    
 Sun Nov 8      40K     29K     914K     983K ━━━━━━━━━━━━━━━━━━  0.4× gpt-5.6-sol       codex, personal                
 ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 179 days     13.2M    6.1M   239.0M   258.2M                                                                           
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 1-4 views   d/w/m group   / filter   W/M this week/month   a account   s settings   ? help   q quit     MCP ● 2 agents 
"
`;

exports[`105×50 History 1`] = `
" tokenhud   1 Overview   2 History   3 Models   4 Accounts            scope all accounts ▾   ● live · 5s 
─────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                         
 LAST 26 WEEKS · daily cost          less ■ ■ ■ ■ ■ more   ╭─ Thu Dec 3 · today ────────────────────────╮
             Jul     Aug       Sep     Oct     Nov         │ cost     $2.42   1.1× your 30-day avg      │
 Mon ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ tokens   1.6M                              │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ models   gpt-5.5 51% · +1                  │
 Wed ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ accounts codex $1.23 · personal $1.18      │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ limits   work weekly passed 80% at 09:05   │
 Fri ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     │          personal 5h hit 100% at 10:02     │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     │          waited 1h18m                      │
 Sun ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     ╰────────────────────────────────────────────╯
                                                                                                         
  Day   Week   Month     This week   This month                       * not all tokens priced · / filter 
 date         input  output    cache        cost vs 30-day avg            top model         accounts     
 Thu Dec 3      95K     43K     1.5M       $2.42 ━━━━━━━━━━━━━━━━━━  1.1× gpt-5.5           codex, perso…
 Wed Dec 2     170K     78K     3.3M       $5.20 ━━━━━━━━━━━━━━━━━━  2.3× claude-opus-4-8   personal, co…
 Tue Dec 1     181K     83K     3.0M       $3.35 ━━━━━━━━━━━━━━━━━━  1.5× gpt-5.5           codex, perso…
 Mon Nov 30     35K     24K     939K      $0.46* ━━━━━━━━━━━━━━━━━━  0.2× claude-sonnet-4-6 work         
 Sun Nov 29       0       0        0       $0.00 ━━━━━━━━━━━━━━━━━━  0.0×                                
 Sat Nov 28    144K     72K     2.8M       $5.39 ━━━━━━━━━━━━━━━━━━  2.4× gpt-5.5           codex, work  
 Fri Nov 27    173K     67K     3.0M      $1.62* ━━━━━━━━━━━━━━━━━━  0.7× claude-opus-4-8   personal, wo…
 Thu Nov 26     75K     30K     1.3M      $1.34* ━━━━━━━━━━━━━━━━━━  0.6× claude-opus-4-8   work, person…
 Wed Nov 25    105K     51K     1.5M      $2.57* ━━━━━━━━━━━━━━━━━━  1.1× gpt-5.5           codex, perso…
 Tue Nov 24     78K     31K     1.5M       $1.98 ━━━━━━━━━━━━━━━━━━  0.9× gpt-5.6-sol       codex        
 Mon Nov 23    182K     93K     4.0M      $5.10* ━━━━━━━━━━━━━━━━━━  2.2× gpt-5.5           codex, work,…
 Sun Nov 22    158K     67K     2.4M       $1.70 ━━━━━━━━━━━━━━━━━━  0.7× claude-sonnet-4-6 personal, wo…
 Sat Nov 21     48K     19K     735K       $1.17 ━━━━━━━━━━━━━━━━━━  0.5× gpt-5.6-sol       codex        
 Fri Nov 20     89K     45K     1.8M       $2.73 ━━━━━━━━━━━━━━━━━━  1.2× gpt-5.5           codex, work,…
 Thu Nov 19    236K    106K     4.4M      $2.63* ━━━━━━━━━━━━━━━━━━  1.1× gpt-5.6-sol       codex, perso…
 Wed Nov 18    194K     79K     3.9M       $5.26 ━━━━━━━━━━━━━━━━━━  2.3× claude-opus-4-8   work, codex,…
 Tue Nov 17     81K     38K     1.9M      $0.14* ━━━━━━━━━━━━━━━━━━  0.1× claude-haiku-4-5  work, person…
 Mon Nov 16     40K     16K     423K    unpriced ━━━━━━━━━━━━━━━━━━  0.0× claude-mystery-9  personal     
 Sun Nov 15       0       0        0       $0.00 ━━━━━━━━━━━━━━━━━━  0.0×                                
 Sat Nov 14    116K     51K     2.3M      $1.99* ━━━━━━━━━━━━━━━━━━  0.9× claude-opus-4-8   personal     
 Fri Nov 13    211K     98K     3.8M      $4.71* ━━━━━━━━━━━━━━━━━━  2.1× gpt-5.6-sol       codex, perso…
 Thu Nov 12    146K     78K     2.8M      $1.45* ━━━━━━━━━━━━━━━━━━  0.6× claude-sonnet-4-6 personal, wo…
 Wed Nov 11     97K     47K     1.9M       $2.24 ━━━━━━━━━━━━━━━━━━  1.0× gpt-5.5           codex, work  
 Tue Nov 10    116K     49K     2.2M      $1.54* ━━━━━━━━━━━━━━━━━━  0.7× gpt-5.6-sol       codex, perso…
 Mon Nov 9      77K     34K     1.3M       $2.07 ━━━━━━━━━━━━━━━━━━  0.9× gpt-5.6-sol       codex, work  
 Sun Nov 8      40K     29K     914K       $1.32 ━━━━━━━━━━━━━━━━━━  0.6× gpt-5.6-sol       codex, perso…
 Sat Nov 7     119K     45K     2.0M      $0.22* ━━━━━━━━━━━━━━━━━━  0.1× claude-haiku-4-5  work, person…
 Fri Nov 6      42K     17K     573K       $1.12 ━━━━━━━━━━━━━━━━━━  0.5× gpt-5.5           codex        
 Thu Nov 5     144K     62K     2.3M       $3.09 ━━━━━━━━━━━━━━━━━━  1.4× gpt-5.5           codex, perso…
 Wed Nov 4     119K     65K     2.2M       $4.00 ━━━━━━━━━━━━━━━━━━  1.8× gpt-5.5           codex, work  
 Tue Nov 3     130K     56K     2.0M       $4.18 ━━━━━━━━━━━━━━━━━━  1.8× gpt-5.5           codex, work  
 ────────────────────────────────────────────────────────────────────────────────────────────────────────
 179 days     13.2M    6.1M   239.0M    $285.03*                                                         
─────────────────────────────────────────────────────────────────────────────────────────────────────────
 1-4 views   d/w/m group   / filter   a account   s settings   ? help   q quit            MCP ● 2 agents 
"
`;

exports[`105×50 History by week, the table focused 1`] = `
" tokenhud   1 Overview   2 History   3 Models   4 Accounts            scope all accounts ▾   ● live · 5s 
─────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                         
 LAST 26 WEEKS · daily cost          less ■ ■ ■ ■ ■ more   ╭─ Thu Nov 26 ───────────────────────────────╮
             Jul     Aug       Sep     Oct     Nov         │ cost     $1.34*   0.6× your 30-day avg     │
 Mon ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ tokens   1.4M                              │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ models   claude-opus-4-8 80% · +2          │
 Wed ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ accounts work $1.08* · personal $0.26      │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ limits   none                              │
 Fri ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     │ tab heat map · ↑/↓ row · enter open        │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     │                                            │
 Sun ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     ╰────────────────────────────────────────────╯
                                                                                                         
  Day   Week   Month     This week   This month                       * not all tokens priced · / filter 
 week           input  output    cache        cost vs 30-day avg            top model         accounts   
 Nov 30–Dec 6    481K    229K     8.7M     $11.42* ━━━━━━━━━━━━━━━━━━  1.2× gpt-5.5           codex, per…
 Nov 23–29       756K    344K    14.1M     $18.00* ━━━━━━━━━━━━━━━━━━  1.1× gpt-5.5           codex, wor…
 Nov 16–22       845K    368K    15.6M     $13.61* ━━━━━━━━━━━━━━━━━━  0.9× gpt-5.6-sol       codex, wor…
 Nov 9–15        762K    359K    14.3M     $14.00* ━━━━━━━━━━━━━━━━━━  0.9× gpt-5.6-sol       codex, per…
 Nov 2–8         750K    353K    12.9M     $18.04* ━━━━━━━━━━━━━━━━━━  1.1× gpt-5.5           codex, wor…
 Oct 26–Nov 1    633K    300K    11.7M     $14.02* ━━━━━━━━━━━━━━━━━━  0.9× claude-opus-4-8   personal, …
 Oct 19–25       768K    382K    14.5M     $18.49* ━━━━━━━━━━━━━━━━━━  1.2× gpt-5.5           codex, wor…
 Oct 12–18       642K    294K    11.1M     $12.24* ━━━━━━━━━━━━━━━━━━  0.8× gpt-5.5           codex, wor…
 Oct 5–11        453K    207K     8.1M     $11.55* ━━━━━━━━━━━━━━━━━━  0.7× claude-opus-4-8   personal, …
 Sep 28–Oct 4    748K    371K    13.6M     $16.82* ━━━━━━━━━━━━━━━━━━  1.1× claude-opus-4-8   codex, wor…
 Sep 21–27       559K    258K    10.3M     $11.82* ━━━━━━━━━━━━━━━━━━  0.7× gpt-5.5           codex, wor…
 Sep 14–20       549K    250K     9.8M      $9.74* ━━━━━━━━━━━━━━━━━━  0.6× gpt-5.6-sol       codex, wor…
 Sep 7–13        494K    224K     8.9M     $10.11* ━━━━━━━━━━━━━━━━━━  0.6× gpt-5.6-sol       codex, per…
 Aug 31–Sep 6    558K    250K    10.4M      $7.88* ━━━━━━━━━━━━━━━━━━  0.5× gpt-5.5           codex, per…
 Aug 24–30       391K    177K     7.3M      $8.06* ━━━━━━━━━━━━━━━━━━  0.5× gpt-5.5           codex, per…
 Aug 17–23       551K    269K    10.6M      $9.34* ━━━━━━━━━━━━━━━━━━  0.6× gpt-5.5           codex, wor…
 Aug 10–16       507K    227K     9.1M     $13.85* ━━━━━━━━━━━━━━━━━━  0.9× claude-opus-4-8   codex, wor…
 Aug 3–9         323K    146K     5.7M      $7.14* ━━━━━━━━━━━━━━━━━━  0.4× gpt-5.6-sol       codex, wor…
 Jul 27–Aug 2    416K    195K     7.3M     $11.22* ━━━━━━━━━━━━━━━━━━  0.7× claude-opus-4-8   codex, wor…
 Jul 20–26       286K    127K     5.1M      $6.15* ━━━━━━━━━━━━━━━━━━  0.4× claude-sonnet-4-6 work, code…
 Jul 13–19       385K    182K     6.8M      $9.93* ━━━━━━━━━━━━━━━━━━  0.6× gpt-5.6-sol       codex, wor…
 Jul 6–12        237K    105K     4.3M      $5.15* ━━━━━━━━━━━━━━━━━━  0.3× claude-opus-4-8   work, pers…
 Jun 29–Jul 5    308K    140K     5.3M      $6.99* ━━━━━━━━━━━━━━━━━━  0.4× claude-opus-4-8   codex, per…
 Jun 22–28       260K    111K     4.6M      $7.50* ━━━━━━━━━━━━━━━━━━  0.5× gpt-5.5           codex, per…
 Jun 15–21       274K    127K     4.7M      $7.23* ━━━━━━━━━━━━━━━━━━  0.5× gpt-5.5           codex, per…
 Jun 8–14        233K    104K     4.1M      $4.70* ━━━━━━━━━━━━━━━━━━  0.3× gpt-5.5           codex, wor…
 ────────────────────────────────────────────────────────────────────────────────────────────────────────
 26 weeks       13.2M    6.1M   239.0M    $285.03*                                                       
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
─────────────────────────────────────────────────────────────────────────────────────────────────────────
 1-4 views   d/w/m group   / filter   a account   s settings   ? help   q quit            MCP ● 2 agents 
"
`;

exports[`120×45 History 1`] = `
" tokenhud   1 Overview   2 History   3 Models   4 Accounts                           scope all accounts ▾   ● live · 5s 
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                                        
 LAST 26 WEEKS · daily cost          less ■ ■ ■ ■ ■ more   ╭─ Thu Dec 3 · today ───────────────────────────────────────╮
             Jul     Aug       Sep     Oct     Nov         │ cost     $2.42   1.1× your 30-day avg                     │
 Mon ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ tokens   1.6M  in 95K · out 43K · cache 1.5M              │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ models   gpt-5.5 51% · claude-sonnet-4-6 49%              │
 Wed ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ accounts codex $1.23 · personal $1.18                     │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ limits   work weekly passed 80% at 09:05                  │
 Fri ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     │          personal 5h hit 100% at 10:02 (waited 1h18m)     │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     │ tab table · ←/→ week · ↑/↓ day                            │
 Sun ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     ╰───────────────────────────────────────────────────────────╯
                                                                                                                        
  Day   Week   Month     This week   This month                                      * not all tokens priced · / filter 
 date         input  output    cache        cost vs 30-day avg            top model         accounts                    
 Thu Dec 3      95K     43K     1.5M       $2.42 ━━━━━━━━━━━━━━━━━━  1.1× gpt-5.5           codex, personal             
 Wed Dec 2     170K     78K     3.3M       $5.20 ━━━━━━━━━━━━━━━━━━  2.3× claude-opus-4-8   personal, codex, work       
 Tue Dec 1     181K     83K     3.0M       $3.35 ━━━━━━━━━━━━━━━━━━  1.5× gpt-5.5           codex, personal, work       
 Mon Nov 30     35K     24K     939K      $0.46* ━━━━━━━━━━━━━━━━━━  0.2× claude-sonnet-4-6 work                        
 Sun Nov 29       0       0        0       $0.00 ━━━━━━━━━━━━━━━━━━  0.0×                                               
 Sat Nov 28    144K     72K     2.8M       $5.39 ━━━━━━━━━━━━━━━━━━  2.4× gpt-5.5           codex, work                 
 Fri Nov 27    173K     67K     3.0M      $1.62* ━━━━━━━━━━━━━━━━━━  0.7× claude-opus-4-8   personal, work              
 Thu Nov 26     75K     30K     1.3M      $1.34* ━━━━━━━━━━━━━━━━━━  0.6× claude-opus-4-8   work, personal              
 Wed Nov 25    105K     51K     1.5M      $2.57* ━━━━━━━━━━━━━━━━━━  1.1× gpt-5.5           codex, personal             
 Tue Nov 24     78K     31K     1.5M       $1.98 ━━━━━━━━━━━━━━━━━━  0.9× gpt-5.6-sol       codex                       
 Mon Nov 23    182K     93K     4.0M      $5.10* ━━━━━━━━━━━━━━━━━━  2.2× gpt-5.5           codex, work, personal       
 Sun Nov 22    158K     67K     2.4M       $1.70 ━━━━━━━━━━━━━━━━━━  0.7× claude-sonnet-4-6 personal, work              
 Sat Nov 21     48K     19K     735K       $1.17 ━━━━━━━━━━━━━━━━━━  0.5× gpt-5.6-sol       codex                       
 Fri Nov 20     89K     45K     1.8M       $2.73 ━━━━━━━━━━━━━━━━━━  1.2× gpt-5.5           codex, work, personal       
 Thu Nov 19    236K    106K     4.4M      $2.63* ━━━━━━━━━━━━━━━━━━  1.1× gpt-5.6-sol       codex, personal, work       
 Wed Nov 18    194K     79K     3.9M       $5.26 ━━━━━━━━━━━━━━━━━━  2.3× claude-opus-4-8   work, codex, personal       
 Tue Nov 17     81K     38K     1.9M      $0.14* ━━━━━━━━━━━━━━━━━━  0.1× claude-haiku-4-5  work, personal              
 Mon Nov 16     40K     16K     423K    unpriced ━━━━━━━━━━━━━━━━━━  0.0× claude-mystery-9  personal                    
 Sun Nov 15       0       0        0       $0.00 ━━━━━━━━━━━━━━━━━━  0.0×                                               
 Sat Nov 14    116K     51K     2.3M      $1.99* ━━━━━━━━━━━━━━━━━━  0.9× claude-opus-4-8   personal                    
 Fri Nov 13    211K     98K     3.8M      $4.71* ━━━━━━━━━━━━━━━━━━  2.1× gpt-5.6-sol       codex, personal, work       
 Thu Nov 12    146K     78K     2.8M      $1.45* ━━━━━━━━━━━━━━━━━━  0.6× claude-sonnet-4-6 personal, work, codex       
 Wed Nov 11     97K     47K     1.9M       $2.24 ━━━━━━━━━━━━━━━━━━  1.0× gpt-5.5           codex, work                 
 Tue Nov 10    116K     49K     2.2M      $1.54* ━━━━━━━━━━━━━━━━━━  0.7× gpt-5.6-sol       codex, personal             
 Mon Nov 9      77K     34K     1.3M       $2.07 ━━━━━━━━━━━━━━━━━━  0.9× gpt-5.6-sol       codex, work                 
 Sun Nov 8      40K     29K     914K       $1.32 ━━━━━━━━━━━━━━━━━━  0.6× gpt-5.6-sol       codex, personal             
 ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 179 days     13.2M    6.1M   239.0M    $285.03*                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 1-4 views   d/w/m group   / filter   W/M this week/month   a account   s settings   ? help   q quit     MCP ● 2 agents 
"
`;

exports[`120×45 History by week, the table focused 1`] = `
" tokenhud   1 Overview   2 History   3 Models   4 Accounts                           scope all accounts ▾   ● live · 5s 
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                                        
 LAST 26 WEEKS · daily cost          less ■ ■ ■ ■ ■ more   ╭─ Thu Nov 26 ──────────────────────────────────────────────╮
             Jul     Aug       Sep     Oct     Nov         │ cost     $1.34*   0.6× your 30-day avg                    │
 Mon ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ tokens   1.4M  in 75K · out 30K · cache 1.3M              │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ models   claude-opus-4-8 80% · claude-sonnet-4-6 20% · +1 │
 Wed ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ accounts work $1.08* · personal $0.26                     │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ limits   none                                             │
 Fri ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     │ tab heat map · ↑/↓ row · enter open                       │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     │                                                           │
 Sun ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     ╰───────────────────────────────────────────────────────────╯
                                                                                                                        
  Day   Week   Month     This week   This month                                      * not all tokens priced · / filter 
 week           input  output    cache        cost vs 30-day avg            top model         accounts                  
 Nov 30–Dec 6    481K    229K     8.7M     $11.42* ━━━━━━━━━━━━━━━━━━  1.2× gpt-5.5           codex, personal, work     
 Nov 23–29       756K    344K    14.1M     $18.00* ━━━━━━━━━━━━━━━━━━  1.1× gpt-5.5           codex, work, personal     
 Nov 16–22       845K    368K    15.6M     $13.61* ━━━━━━━━━━━━━━━━━━  0.9× gpt-5.6-sol       codex, work, personal     
 Nov 9–15        762K    359K    14.3M     $14.00* ━━━━━━━━━━━━━━━━━━  0.9× gpt-5.6-sol       codex, personal, work     
 Nov 2–8         750K    353K    12.9M     $18.04* ━━━━━━━━━━━━━━━━━━  1.1× gpt-5.5           codex, work, personal     
 Oct 26–Nov 1    633K    300K    11.7M     $14.02* ━━━━━━━━━━━━━━━━━━  0.9× claude-opus-4-8   personal, codex, work     
 Oct 19–25       768K    382K    14.5M     $18.49* ━━━━━━━━━━━━━━━━━━  1.2× gpt-5.5           codex, work, personal     
 Oct 12–18       642K    294K    11.1M     $12.24* ━━━━━━━━━━━━━━━━━━  0.8× gpt-5.5           codex, work, personal     
 Oct 5–11        453K    207K     8.1M     $11.55* ━━━━━━━━━━━━━━━━━━  0.7× claude-opus-4-8   personal, codex, work     
 Sep 28–Oct 4    748K    371K    13.6M     $16.82* ━━━━━━━━━━━━━━━━━━  1.1× claude-opus-4-8   codex, work, personal     
 Sep 21–27       559K    258K    10.3M     $11.82* ━━━━━━━━━━━━━━━━━━  0.7× gpt-5.5           codex, work, personal     
 Sep 14–20       549K    250K     9.8M      $9.74* ━━━━━━━━━━━━━━━━━━  0.6× gpt-5.6-sol       codex, work, personal     
 Sep 7–13        494K    224K     8.9M     $10.11* ━━━━━━━━━━━━━━━━━━  0.6× gpt-5.6-sol       codex, personal, work     
 Aug 31–Sep 6    558K    250K    10.4M      $7.88* ━━━━━━━━━━━━━━━━━━  0.5× gpt-5.5           codex, personal, work     
 Aug 24–30       391K    177K     7.3M      $8.06* ━━━━━━━━━━━━━━━━━━  0.5× gpt-5.5           codex, personal, work     
 Aug 17–23       551K    269K    10.6M      $9.34* ━━━━━━━━━━━━━━━━━━  0.6× gpt-5.5           codex, work, personal     
 Aug 10–16       507K    227K     9.1M     $13.85* ━━━━━━━━━━━━━━━━━━  0.9× claude-opus-4-8   codex, work, personal     
 Aug 3–9         323K    146K     5.7M      $7.14* ━━━━━━━━━━━━━━━━━━  0.4× gpt-5.6-sol       codex, work, personal     
 Jul 27–Aug 2    416K    195K     7.3M     $11.22* ━━━━━━━━━━━━━━━━━━  0.7× claude-opus-4-8   codex, work, personal     
 Jul 20–26       286K    127K     5.1M      $6.15* ━━━━━━━━━━━━━━━━━━  0.4× claude-sonnet-4-6 work, codex, personal     
 Jul 13–19       385K    182K     6.8M      $9.93* ━━━━━━━━━━━━━━━━━━  0.6× gpt-5.6-sol       codex, work, personal     
 Jul 6–12        237K    105K     4.3M      $5.15* ━━━━━━━━━━━━━━━━━━  0.3× claude-opus-4-8   work, personal, codex     
 Jun 29–Jul 5    308K    140K     5.3M      $6.99* ━━━━━━━━━━━━━━━━━━  0.4× claude-opus-4-8   codex, personal, work     
 Jun 22–28       260K    111K     4.6M      $7.50* ━━━━━━━━━━━━━━━━━━  0.5× gpt-5.5           codex, personal, work     
 Jun 15–21       274K    127K     4.7M      $7.23* ━━━━━━━━━━━━━━━━━━  0.5× gpt-5.5           codex, personal, work     
 Jun 8–14        233K    104K     4.1M      $4.70* ━━━━━━━━━━━━━━━━━━  0.3× gpt-5.5           codex, work, personal     
 ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 26 weeks       13.2M    6.1M   239.0M    $285.03*                                                                      
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 1-4 views   d/w/m group   / filter   W/M this week/month   a account   s settings   ? help   q quit     MCP ● 2 agents 
"
`;

exports[`80×24 History 1`] = `
" tokenhud   1   2 History   3   4                  all accounts ▾   ● live · 5s 
────────────────────────────────────────────────────────────────────────────────
                                                                                
 LAST 26 WEEKS · daily cost          less ■ ■ ■ ■ ■ more                        
             Jul     Aug       Sep     Oct     Nov                              
 Mon ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                        
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                        
 Wed ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                        
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                        
 Fri ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                          
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                          
 Sun ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                          
                                                                                
  Day   Week   Month     This week   This month                        / filter 
 date         input  output    cache        cost vs 30-day avg                  
 Thu Dec 3      95K     43K     1.5M       $2.42 ━━━━━━━━━━━━━━━━━━  1.1×       
 Wed Dec 2     170K     78K     3.3M       $5.20 ━━━━━━━━━━━━━━━━━━  2.3×       
 Tue Dec 1     181K     83K     3.0M       $3.35 ━━━━━━━━━━━━━━━━━━  1.5×       
 Mon Nov 30     35K     24K     939K      $0.46* ━━━━━━━━━━━━━━━━━━  0.2×       
 Sun Nov 29       0       0        0       $0.00 ━━━━━━━━━━━━━━━━━━  0.0×       
 ───────────────────────────────────────────────────────────────────────────────
 179 days     13.2M    6.1M   239.0M    $285.03*                                
────────────────────────────────────────────────────────────────────────────────
 1-4 views   a account   s settings   ? help   q quit            MCP ● 2 agents 
"
`;

exports[`80×24 History by week, the table focused 1`] = `
" tokenhud   1   2 History   3   4                  all accounts ▾   ● live · 5s 
────────────────────────────────────────────────────────────────────────────────
                                                                                
 LAST 26 WEEKS · daily cost          less ■ ■ ■ ■ ■ more                        
             Jul     Aug       Sep     Oct     Nov                              
 Mon ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                        
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                        
 Wed ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                        
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                        
 Fri ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                          
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                          
 Sun ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                          
                                                                                
  Day   Week   Month     This week   This month                        / filter 
 week           input  output    cache        cost vs 30-day avg                
 Nov 30–Dec 6    481K    229K     8.7M     $11.42* ━━━━━━━━━━━━━━━━━━  1.2×     
 Nov 23–29       756K    344K    14.1M     $18.00* ━━━━━━━━━━━━━━━━━━  1.1×     
 Nov 16–22       845K    368K    15.6M     $13.61* ━━━━━━━━━━━━━━━━━━  0.9×     
 Nov 9–15        762K    359K    14.3M     $14.00* ━━━━━━━━━━━━━━━━━━  0.9×     
 Nov 2–8         750K    353K    12.9M     $18.04* ━━━━━━━━━━━━━━━━━━  1.1×     
 ───────────────────────────────────────────────────────────────────────────────
 26 weeks       13.2M    6.1M   239.0M    $285.03*                              
────────────────────────────────────────────────────────────────────────────────
 1-4 views   a account   s settings   ? help   q quit            MCP ● 2 agents 
"
`;

exports[`160×50 History 1`] = `
" tokenhud   1 Overview   2 History   3 Models   4 Accounts                                                                   scope all accounts ▾   ● live · 5s 
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                                                                                
 LAST 26 WEEKS · daily cost          less ■ ■ ■ ■ ■ more   ╭─ Thu Dec 3 · today ──────────────────────────────────────────╮                                     
             Jul     Aug       Sep     Oct     Nov         │ cost     $2.42   1.1× your 30-day avg                        │                                     
 Mon ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ tokens   1.6M  in 95K · out 43K · cache 1.5M                 │                                     
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ models   gpt-5.5 51% · claude-sonnet-4-6 49%                 │                                     
 Wed ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ accounts codex $1.23 · personal $1.18                        │                                     
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ limits   work weekly passed 80% at 09:05                     │                                     
 Fri ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     │          personal 5h hit 100% at 10:02 (waited 1h18m)        │                                     
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     │ tab table · ←/→ week · ↑/↓ day                               │                                     
 Sun ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     ╰──────────────────────────────────────────────────────────────╯                                     
                                                                                                                                                                
  Day   Week   Month     This week   This month                                                                              * not all tokens priced · / filter 
 date         input  output    cache        cost vs 30-day avg            top model         accounts                                                            
 Thu Dec 3      95K     43K     1.5M       $2.42 ━━━━━━━━━━━━━━━━━━  1.1× gpt-5.5           codex, personal                                                     
 Wed Dec 2     170K     78K     3.3M       $5.20 ━━━━━━━━━━━━━━━━━━  2.3× claude-opus-4-8   personal, codex, work                                               
 Tue Dec 1     181K     83K     3.0M       $3.35 ━━━━━━━━━━━━━━━━━━  1.5× gpt-5.5           codex, personal, work                                               
 Mon Nov 30     35K     24K     939K      $0.46* ━━━━━━━━━━━━━━━━━━  0.2× claude-sonnet-4-6 work                                                                
 Sun Nov 29       0       0        0       $0.00 ━━━━━━━━━━━━━━━━━━  0.0×                                                                                       
 Sat Nov 28    144K     72K     2.8M       $5.39 ━━━━━━━━━━━━━━━━━━  2.4× gpt-5.5           codex, work                                                         
 Fri Nov 27    173K     67K     3.0M      $1.62* ━━━━━━━━━━━━━━━━━━  0.7× claude-opus-4-8   personal, work                                                      
 Thu Nov 26     75K     30K     1.3M      $1.34* ━━━━━━━━━━━━━━━━━━  0.6× claude-opus-4-8   work, personal                                                      
 Wed Nov 25    105K     51K     1.5M      $2.57* ━━━━━━━━━━━━━━━━━━  1.1× gpt-5.5           codex, personal                                                     
 Tue Nov 24     78K     31K     1.5M       $1.98 ━━━━━━━━━━━━━━━━━━  0.9× gpt-5.6-sol       codex                                                               
 Mon Nov 23    182K     93K     4.0M      $5.10* ━━━━━━━━━━━━━━━━━━  2.2× gpt-5.5           codex, work, personal                                               
 Sun Nov 22    158K     67K     2.4M       $1.70 ━━━━━━━━━━━━━━━━━━  0.7× claude-sonnet-4-6 personal, work                                                      
 Sat Nov 21     48K     19K     735K       $1.17 ━━━━━━━━━━━━━━━━━━  0.5× gpt-5.6-sol       codex                                                               
 Fri Nov 20     89K     45K     1.8M       $2.73 ━━━━━━━━━━━━━━━━━━  1.2× gpt-5.5           codex, work, personal                                               
 Thu Nov 19    236K    106K     4.4M      $2.63* ━━━━━━━━━━━━━━━━━━  1.1× gpt-5.6-sol       codex, personal, work                                               
 Wed Nov 18    194K     79K     3.9M       $5.26 ━━━━━━━━━━━━━━━━━━  2.3× claude-opus-4-8   work, codex, personal                                               
 Tue Nov 17     81K     38K     1.9M      $0.14* ━━━━━━━━━━━━━━━━━━  0.1× claude-haiku-4-5  work, personal                                                      
 Mon Nov 16     40K     16K     423K    unpriced ━━━━━━━━━━━━━━━━━━  0.0× claude-mystery-9  personal                                                            
 Sun Nov 15       0       0        0       $0.00 ━━━━━━━━━━━━━━━━━━  0.0×                                                                                       
 Sat Nov 14    116K     51K     2.3M      $1.99* ━━━━━━━━━━━━━━━━━━  0.9× claude-opus-4-8   personal                                                            
 Fri Nov 13    211K     98K     3.8M      $4.71* ━━━━━━━━━━━━━━━━━━  2.1× gpt-5.6-sol       codex, personal, work                                               
 Thu Nov 12    146K     78K     2.8M      $1.45* ━━━━━━━━━━━━━━━━━━  0.6× claude-sonnet-4-6 personal, work, codex                                               
 Wed Nov 11     97K     47K     1.9M       $2.24 ━━━━━━━━━━━━━━━━━━  1.0× gpt-5.5           codex, work                                                         
 Tue Nov 10    116K     49K     2.2M      $1.54* ━━━━━━━━━━━━━━━━━━  0.7× gpt-5.6-sol       codex, personal                                                     
 Mon Nov 9      77K     34K     1.3M       $2.07 ━━━━━━━━━━━━━━━━━━  0.9× gpt-5.6-sol       codex, work                                                         
 Sun Nov 8      40K     29K     914K       $1.32 ━━━━━━━━━━━━━━━━━━  0.6× gpt-5.6-sol       codex, personal                                                     
 Sat Nov 7     119K     45K     2.0M      $0.22* ━━━━━━━━━━━━━━━━━━  0.1× claude-haiku-4-5  work, personal                                                      
 Fri Nov 6      42K     17K     573K       $1.12 ━━━━━━━━━━━━━━━━━━  0.5× gpt-5.5           codex                                                               
 Thu Nov 5     144K     62K     2.3M       $3.09 ━━━━━━━━━━━━━━━━━━  1.4× gpt-5.5           codex, personal, work                                               
 Wed Nov 4     119K     65K     2.2M       $4.00 ━━━━━━━━━━━━━━━━━━  1.8× gpt-5.5           codex, work                                                         
 Tue Nov 3     130K     56K     2.0M       $4.18 ━━━━━━━━━━━━━━━━━━  1.8× gpt-5.5           codex, work                                                         
 ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 179 days     13.2M    6.1M   239.0M    $285.03*                                                                                                                
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 1-4 views   d/w/m group   / filter   W/M this week/month   tab heat map/table   enter open   a account   s settings   ? help   q quit           MCP ● 2 agents 
"
`;

exports[`160×50 History by week, the table focused 1`] = `
" tokenhud   1 Overview   2 History   3 Models   4 Accounts                                                                   scope all accounts ▾   ● live · 5s 
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                                                                                
 LAST 26 WEEKS · daily cost          less ■ ■ ■ ■ ■ more   ╭─ Thu Nov 26 ─────────────────────────────────────────────────╮                                     
             Jul     Aug       Sep     Oct     Nov         │ cost     $1.34*   0.6× your 30-day avg                       │                                     
 Mon ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ tokens   1.4M  in 75K · out 30K · cache 1.3M                 │                                     
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ models   claude-opus-4-8 80% · claude-sonnet-4-6 20% · +1    │                                     
 Wed ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ accounts work $1.08* · personal $0.26                        │                                     
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ limits   none                                                │                                     
 Fri ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     │ tab heat map · ↑/↓ row · enter open                          │                                     
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     │                                                              │                                     
 Sun ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     ╰──────────────────────────────────────────────────────────────╯                                     
                                                                                                                                                                
  Day   Week   Month     This week   This month                                                                              * not all tokens priced · / filter 
 week           input  output    cache        cost vs 30-day avg            top model         accounts                                                          
 Nov 30–Dec 6    481K    229K     8.7M     $11.42* ━━━━━━━━━━━━━━━━━━  1.2× gpt-5.5           codex, personal, work                                             
 Nov 23–29       756K    344K    14.1M     $18.00* ━━━━━━━━━━━━━━━━━━  1.1× gpt-5.5           codex, work, personal                                             
 Nov 16–22       845K    368K    15.6M     $13.61* ━━━━━━━━━━━━━━━━━━  0.9× gpt-5.6-sol       codex, work, personal                                             
 Nov 9–15        762K    359K    14.3M     $14.00* ━━━━━━━━━━━━━━━━━━  0.9× gpt-5.6-sol       codex, personal, work                                             
 Nov 2–8         750K    353K    12.9M     $18.04* ━━━━━━━━━━━━━━━━━━  1.1× gpt-5.5           codex, work, personal                                             
 Oct 26–Nov 1    633K    300K    11.7M     $14.02* ━━━━━━━━━━━━━━━━━━  0.9× claude-opus-4-8   personal, codex, work                                             
 Oct 19–25       768K    382K    14.5M     $18.49* ━━━━━━━━━━━━━━━━━━  1.2× gpt-5.5           codex, work, personal                                             
 Oct 12–18       642K    294K    11.1M     $12.24* ━━━━━━━━━━━━━━━━━━  0.8× gpt-5.5           codex, work, personal                                             
 Oct 5–11        453K    207K     8.1M     $11.55* ━━━━━━━━━━━━━━━━━━  0.7× claude-opus-4-8   personal, codex, work                                             
 Sep 28–Oct 4    748K    371K    13.6M     $16.82* ━━━━━━━━━━━━━━━━━━  1.1× claude-opus-4-8   codex, work, personal                                             
 Sep 21–27       559K    258K    10.3M     $11.82* ━━━━━━━━━━━━━━━━━━  0.7× gpt-5.5           codex, work, personal                                             
 Sep 14–20       549K    250K     9.8M      $9.74* ━━━━━━━━━━━━━━━━━━  0.6× gpt-5.6-sol       codex, work, personal                                             
 Sep 7–13        494K    224K     8.9M     $10.11* ━━━━━━━━━━━━━━━━━━  0.6× gpt-5.6-sol       codex, personal, work                                             
 Aug 31–Sep 6    558K    250K    10.4M      $7.88* ━━━━━━━━━━━━━━━━━━  0.5× gpt-5.5           codex, personal, work                                             
 Aug 24–30       391K    177K     7.3M      $8.06* ━━━━━━━━━━━━━━━━━━  0.5× gpt-5.5           codex, personal, work                                             
 Aug 17–23       551K    269K    10.6M      $9.34* ━━━━━━━━━━━━━━━━━━  0.6× gpt-5.5           codex, work, personal                                             
 Aug 10–16       507K    227K     9.1M     $13.85* ━━━━━━━━━━━━━━━━━━  0.9× claude-opus-4-8   codex, work, personal                                             
 Aug 3–9         323K    146K     5.7M      $7.14* ━━━━━━━━━━━━━━━━━━  0.4× gpt-5.6-sol       codex, work, personal                                             
 Jul 27–Aug 2    416K    195K     7.3M     $11.22* ━━━━━━━━━━━━━━━━━━  0.7× claude-opus-4-8   codex, work, personal                                             
 Jul 20–26       286K    127K     5.1M      $6.15* ━━━━━━━━━━━━━━━━━━  0.4× claude-sonnet-4-6 work, codex, personal                                             
 Jul 13–19       385K    182K     6.8M      $9.93* ━━━━━━━━━━━━━━━━━━  0.6× gpt-5.6-sol       codex, work, personal                                             
 Jul 6–12        237K    105K     4.3M      $5.15* ━━━━━━━━━━━━━━━━━━  0.3× claude-opus-4-8   work, personal, codex                                             
 Jun 29–Jul 5    308K    140K     5.3M      $6.99* ━━━━━━━━━━━━━━━━━━  0.4× claude-opus-4-8   codex, personal, work                                             
 Jun 22–28       260K    111K     4.6M      $7.50* ━━━━━━━━━━━━━━━━━━  0.5× gpt-5.5           codex, personal, work                                             
 Jun 15–21       274K    127K     4.7M      $7.23* ━━━━━━━━━━━━━━━━━━  0.5× gpt-5.5           codex, personal, work                                             
 Jun 8–14        233K    104K     4.1M      $4.70* ━━━━━━━━━━━━━━━━━━  0.3× gpt-5.5           codex, work, personal                                             
 ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 26 weeks       13.2M    6.1M   239.0M    $285.03*                                                                                                              
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 1-4 views   d/w/m group   / filter   W/M this week/month   tab heat map/table   enter open   a account   s settings   ? help   q quit           MCP ● 2 agents 
"
`;

exports[`colours at 120×45, by role: the cursor, the selected row, the bars 1`] = `
"[head/bg/b] tokenhud [-/bg] [dim/bg] 1 [mute/bg]Overview [-/bg] [head/tab/b] 2 History [-/bg] [dim/bg] 3 [mute/bg]Models [-/bg] [dim/bg] 4 [mute/bg]Accounts [-/bg] [-/bg]                         [dim/bg]scope [fg/bg]all accounts ▾[live/bg]   ● [dim/bg]live · 5s 
[border/bg]────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[-/bg]                                                                                                                        
[head/bg/b] LAST 26 WEEKS · daily cost[-/bg]          [dim/bg]less [heat0/bg]■ [heat1/bg]■ [heat2/bg]■ [heat3/bg]■ [tokens|heat4/bg]■ [dim/bg]more [-/bg]  [border/bg]╭─ [head/bg/b]Wed Nov 25[border/bg] ──────────────────────────────────────────────╮
[-/bg]             [dim/bg]Jul[-/bg]     [dim/bg]Aug[-/bg]       [dim/bg]Sep[-/bg]     [dim/bg]Oct[-/bg]     [dim/bg]Nov[-/bg]         [border/bg]│[-/bg] [mute/bg]cost     [cost|mid/bg/b]$2.57*[dim/bg]   1.1× your 30-day avg[-/bg]                    [border/bg]│
[dim/bg] Mon[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat3/bg]■[-/bg] [heat3/bg]■[-/bg] [heat3/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat3/bg]■[-/bg] [heat3/bg]■[-/bg] [heat3/bg]■[-/bg] [tokens|heat4/bg]■[-/bg] [tokens|heat4/bg]■[-/bg] [heat2/bg]■[-/bg] [heat0/bg]■[-/bg] [tokens|heat4/bg]■[-/bg] [heat1/bg]■[-/bg]   [border/bg]│[-/bg] [mute/bg]tokens   [tokens|heat4/bg]1.7M[dim/bg]  in 105K · out 51K · cache 1.5M[-/bg]             [border/bg]│
[-/bg] [-/bg]    [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat3/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat0/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat3/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat3/bg]■[-/bg] [heat1/bg]■[-/bg] [heat3/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [tokens|heat4/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat3/bg]■[-/bg]   [border/bg]│[-/bg] [mute/bg]models   [fg/bg]gpt-5.5 64% · gpt-5.6-sol 36% · +1[-/bg]               [border/bg]│
[dim/bg] Wed[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat3/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat3/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat3/bg]■[-/bg] [heat2/bg]■[-/bg] [tokens|heat4/bg]■[-/bg] [head/bg/b]■[-/bg] [tokens|heat4/bg]■[-/bg]   [border/bg]│[-/bg] [mute/bg]accounts [fg/bg]codex $2.57 · personal unpriced[-/bg]                  [border/bg]│
[-/bg] [-/bg]    [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat3/bg]■[-/bg] [heat3/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [tokens|heat4/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat3/bg]■[-/bg] [heat3/bg]■[-/bg] [heat3/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg]   [border/bg]│[-/bg] [mute/bg]limits   [dim/bg]none[-/bg]                                             [border/bg]│
[dim/bg] Fri[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [tokens|heat4/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [tokens|heat4/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [tokens|heat4/bg]■[-/bg] [heat3/bg]■[-/bg] [heat2/bg]■[-/bg]     [border/bg]│[-/bg] [dim/bg]tab table · ←/→ week · ↑/↓ day[-/bg]                            [border/bg]│
[-/bg] [-/bg]    [heat0/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat0/bg]■[-/bg] [heat1/bg]■[-/bg] [heat0/bg]■[-/bg] [heat0/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat0/bg]■[-/bg] [heat3/bg]■[-/bg] [heat0/bg]■[-/bg] [heat0/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [tokens|heat4/bg]■[-/bg]     [border/bg]│[-/bg]                                                           [border/bg]│
[dim/bg] Sun[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat0/bg]■[-/bg] [heat1/bg]■[-/bg] [heat0/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat0/bg]■[-/bg] [heat0/bg]■[-/bg] [heat0/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat0/bg]■[-/bg] [heat1/bg]■[-/bg] [heat3/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat0/bg]■[-/bg] [heat2/bg]■[-/bg] [heat0/bg]■[-/bg]     [border/bg]╰───────────────────────────────────────────────────────────╯
[-/bg]                                                                                                                        
[-/bg] [head/tab/b] Day [-/bg] [mute/bg] Week [-/bg] [mute/bg] Month [-/bg]   [mute/bg] This week [-/bg] [mute/bg] This month [-/bg] [-/bg]                                    [dim/bg]* not all tokens priced · [head/bg/b]/ [dim/bg]filter 
[-/bg] [dim/bg]date      [-/bg] [dim/bg]  input[-/bg] [dim/bg] output[-/bg] [dim/bg]   cache[-/bg] [dim/bg]       cost[-/bg] [dim/bg]vs 30-day avg     [-/bg] [-/bg]     [-/bg] [dim/bg]top model        [-/bg] [dim/bg]accounts                    
[-/bg] [fg/bg]Thu Dec 3 [-/bg] [tokens|heat4/bg]    95K[-/bg] [tokens|heat4/bg]    43K[-/bg] [tokens|heat4/bg]    1.5M[-/bg] [cost|mid/bg/b]      $2.42[-/bg] [cost|mid/bg]━━━━━━━━[empty/bg]━━━━━━━━━━[-/bg] [mute/bg] 1.1×[-/bg] [fg/bg]gpt-5.5          [-/bg] [mute/bg]codex, personal             
[-/bg] [fg/bg]Wed Dec 2 [-/bg] [tokens|heat4/bg]   170K[-/bg] [tokens|heat4/bg]    78K[-/bg] [tokens|heat4/bg]    3.3M[-/bg] [cost|mid/bg/b]      $5.20[-/bg] [high/bg]━━━━━━━━━━━━━━━━━━[-/bg] [mute/bg] 2.3×[-/bg] [fg/bg]claude-opus-4-8  [-/bg] [mute/bg]personal, codex, work       
[-/bg] [fg/bg]Tue Dec 1 [-/bg] [tokens|heat4/bg]   181K[-/bg] [tokens|heat4/bg]    83K[-/bg] [tokens|heat4/bg]    3.0M[-/bg] [cost|mid/bg/b]      $3.35[-/bg] [cost|mid/bg]━━━━━━━━━━━━[empty/bg]━━━━━━[-/bg] [mute/bg] 1.5×[-/bg] [fg/bg]gpt-5.5          [-/bg] [mute/bg]codex, personal, work       
[-/bg] [fg/bg]Mon Nov 30[-/bg] [tokens|heat4/bg]    35K[-/bg] [tokens|heat4/bg]    24K[-/bg] [tokens|heat4/bg]    939K[-/bg] [cost|mid/bg/b]     $0.46*[-/bg] [cost|mid/bg]━━[empty/bg]━━━━━━━━━━━━━━━━[-/bg] [mute/bg] 0.2×[-/bg] [fg/bg]claude-sonnet-4-6[-/bg] [mute/bg]work                        
[-/bg] [fg/bg]Sun Nov 29[-/bg] [tokens|heat4/bg]      0[-/bg] [tokens|heat4/bg]      0[-/bg] [tokens|heat4/bg]       0[-/bg] [cost|mid/bg/b]      $0.00[-/bg] [empty/bg]━━━━━━━━━━━━━━━━━━[-/bg] [mute/bg] 0.0×[-/bg] [-/bg]                 [-/bg] [-/bg]                            
[-/bg] [fg/bg]Sat Nov 28[-/bg] [tokens|heat4/bg]   144K[-/bg] [tokens|heat4/bg]    72K[-/bg] [tokens|heat4/bg]    2.8M[-/bg] [cost|mid/bg/b]      $5.39[-/bg] [high/bg]━━━━━━━━━━━━━━━━━━[-/bg] [mute/bg] 2.4×[-/bg] [fg/bg]gpt-5.5          [-/bg] [mute/bg]codex, work                 
[-/bg] [fg/bg]Fri Nov 27[-/bg] [tokens|heat4/bg]   173K[-/bg] [tokens|heat4/bg]    67K[-/bg] [tokens|heat4/bg]    3.0M[-/bg] [cost|mid/bg/b]     $1.62*[-/bg] [cost|mid/bg]━━━━━━[empty/bg]━━━━━━━━━━━━[-/bg] [mute/bg] 0.7×[-/bg] [fg/bg]claude-opus-4-8  [-/bg] [mute/bg]personal, work              
[-/bg] [fg/bg]Thu Nov 26[-/bg] [tokens|heat4/bg]    75K[-/bg] [tokens|heat4/bg]    30K[-/bg] [tokens|heat4/bg]    1.3M[-/bg] [cost|mid/bg/b]     $1.34*[-/bg] [cost|mid/bg]━━━━━[empty/bg]━━━━━━━━━━━━━[-/bg] [mute/bg] 0.6×[-/bg] [fg/bg]claude-opus-4-8  [-/bg] [mute/bg]work, personal              
[-/bg] [head/sel/b]Wed Nov 25[-/sel] [tokens|heat4/sel]   105K[-/sel] [tokens|heat4/sel]    51K[-/sel] [tokens|heat4/sel]    1.5M[-/sel] [cost|mid/sel/b]     $2.57*[-/sel] [cost|mid/sel]━━━━━━━━━[empty/sel]━━━━━━━━━[-/sel] [mute/sel] 1.1×[-/sel] [fg/sel]gpt-5.5          [-/sel] [mute/sel]codex, personal             
[-/bg] [fg/bg]Tue Nov 24[-/bg] [tokens|heat4/bg]    78K[-/bg] [tokens|heat4/bg]    31K[-/bg] [tokens|heat4/bg]    1.5M[-/bg] [cost|mid/bg/b]      $1.98[-/bg] [cost|mid/bg]━━━━━━━[empty/bg]━━━━━━━━━━━[-/bg] [mute/bg] 0.9×[-/bg] [fg/bg]gpt-5.6-sol      [-/bg] [mute/bg]codex                       
[-/bg] [fg/bg]Mon Nov 23[-/bg] [tokens|heat4/bg]   182K[-/bg] [tokens|heat4/bg]    93K[-/bg] [tokens|heat4/bg]    4.0M[-/bg] [cost|mid/bg/b]     $5.10*[-/bg] [high/bg]━━━━━━━━━━━━━━━━━━[-/bg] [mute/bg] 2.2×[-/bg] [fg/bg]gpt-5.5          [-/bg] [mute/bg]codex, work, personal       
[-/bg] [fg/bg]Sun Nov 22[-/bg] [tokens|heat4/bg]   158K[-/bg] [tokens|heat4/bg]    67K[-/bg] [tokens|heat4/bg]    2.4M[-/bg] [cost|mid/bg/b]      $1.70[-/bg] [cost|mid/bg]━━━━━━[empty/bg]━━━━━━━━━━━━[-/bg] [mute/bg] 0.7×[-/bg] [fg/bg]claude-sonnet-4-6[-/bg] [mute/bg]personal, work              
[-/bg] [fg/bg]Sat Nov 21[-/bg] [tokens|heat4/bg]    48K[-/bg] [tokens|heat4/bg]    19K[-/bg] [tokens|heat4/bg]    735K[-/bg] [cost|mid/bg/b]      $1.17[-/bg] [cost|mid/bg]━━━━[empty/bg]━━━━━━━━━━━━━━[-/bg] [mute/bg] 0.5×[-/bg] [fg/bg]gpt-5.6-sol      [-/bg] [mute/bg]codex                       
[-/bg] [fg/bg]Fri Nov 20[-/bg] [tokens|heat4/bg]    89K[-/bg] [tokens|heat4/bg]    45K[-/bg] [tokens|heat4/bg]    1.8M[-/bg] [cost|mid/bg/b]      $2.73[-/bg] [cost|mid/bg]━━━━━━━━━━[empty/bg]━━━━━━━━[-/bg] [mute/bg] 1.2×[-/bg] [fg/bg]gpt-5.5          [-/bg] [mute/bg]codex, work, personal       
[-/bg] [fg/bg]Thu Nov 19[-/bg] [tokens|heat4/bg]   236K[-/bg] [tokens|heat4/bg]   106K[-/bg] [tokens|heat4/bg]    4.4M[-/bg] [cost|mid/bg/b]     $2.63*[-/bg] [cost|mid/bg]━━━━━━━━━[empty/bg]━━━━━━━━━[-/bg] [mute/bg] 1.1×[-/bg] [fg/bg]gpt-5.6-sol      [-/bg] [mute/bg]codex, personal, work       
[-/bg] [fg/bg]Wed Nov 18[-/bg] [tokens|heat4/bg]   194K[-/bg] [tokens|heat4/bg]    79K[-/bg] [tokens|heat4/bg]    3.9M[-/bg] [cost|mid/bg/b]      $5.26[-/bg] [high/bg]━━━━━━━━━━━━━━━━━━[-/bg] [mute/bg] 2.3×[-/bg] [fg/bg]claude-opus-4-8  [-/bg] [mute/bg]work, codex, personal       
[-/bg] [fg/bg]Tue Nov 17[-/bg] [tokens|heat4/bg]    81K[-/bg] [tokens|heat4/bg]    38K[-/bg] [tokens|heat4/bg]    1.9M[-/bg] [cost|mid/bg/b]     $0.14*[-/bg] [cost|mid/bg]━[empty/bg]━━━━━━━━━━━━━━━━━[-/bg] [mute/bg] 0.1×[-/bg] [fg/bg]claude-haiku-4-5 [-/bg] [mute/bg]work, personal              
[-/bg] [fg/bg]Mon Nov 16[-/bg] [tokens|heat4/bg]    40K[-/bg] [tokens|heat4/bg]    16K[-/bg] [tokens|heat4/bg]    423K[-/bg] [dim/bg]   unpriced[-/bg] [empty/bg]━━━━━━━━━━━━━━━━━━[-/bg] [mute/bg] 0.0×[-/bg] [fg/bg]claude-mystery-9 [-/bg] [mute/bg]personal                    
[-/bg] [fg/bg]Sun Nov 15[-/bg] [tokens|heat4/bg]      0[-/bg] [tokens|heat4/bg]      0[-/bg] [tokens|heat4/bg]       0[-/bg] [cost|mid/bg/b]      $0.00[-/bg] [empty/bg]━━━━━━━━━━━━━━━━━━[-/bg] [mute/bg] 0.0×[-/bg] [-/bg]                 [-/bg] [-/bg]                            
[-/bg] [fg/bg]Sat Nov 14[-/bg] [tokens|heat4/bg]   116K[-/bg] [tokens|heat4/bg]    51K[-/bg] [tokens|heat4/bg]    2.3M[-/bg] [cost|mid/bg/b]     $1.99*[-/bg] [cost|mid/bg]━━━━━━━[empty/bg]━━━━━━━━━━━[-/bg] [mute/bg] 0.9×[-/bg] [fg/bg]claude-opus-4-8  [-/bg] [mute/bg]personal                    
[-/bg] [fg/bg]Fri Nov 13[-/bg] [tokens|heat4/bg]   211K[-/bg] [tokens|heat4/bg]    98K[-/bg] [tokens|heat4/bg]    3.8M[-/bg] [cost|mid/bg/b]     $4.71*[-/bg] [high/bg]━━━━━━━━━━━━━━━━[empty/bg]━━[-/bg] [mute/bg] 2.1×[-/bg] [fg/bg]gpt-5.6-sol      [-/bg] [mute/bg]codex, personal, work       
[-/bg] [fg/bg]Thu Nov 12[-/bg] [tokens|heat4/bg]   146K[-/bg] [tokens|heat4/bg]    78K[-/bg] [tokens|heat4/bg]    2.8M[-/bg] [cost|mid/bg/b]     $1.45*[-/bg] [cost|mid/bg]━━━━━[empty/bg]━━━━━━━━━━━━━[-/bg] [mute/bg] 0.6×[-/bg] [fg/bg]claude-sonnet-4-6[-/bg] [mute/bg]personal, work, codex       
[-/bg] [fg/bg]Wed Nov 11[-/bg] [tokens|heat4/bg]    97K[-/bg] [tokens|heat4/bg]    47K[-/bg] [tokens|heat4/bg]    1.9M[-/bg] [cost|mid/bg/b]      $2.24[-/bg] [cost|mid/bg]━━━━━━━━[empty/bg]━━━━━━━━━━[-/bg] [mute/bg] 1.0×[-/bg] [fg/bg]gpt-5.5          [-/bg] [mute/bg]codex, work                 
[-/bg] [fg/bg]Tue Nov 10[-/bg] [tokens|heat4/bg]   116K[-/bg] [tokens|heat4/bg]    49K[-/bg] [tokens|heat4/bg]    2.2M[-/bg] [cost|mid/bg/b]     $1.54*[-/bg] [cost|mid/bg]━━━━━[empty/bg]━━━━━━━━━━━━━[-/bg] [mute/bg] 0.7×[-/bg] [fg/bg]gpt-5.6-sol      [-/bg] [mute/bg]codex, personal             
[-/bg] [fg/bg]Mon Nov 9 [-/bg] [tokens|heat4/bg]    77K[-/bg] [tokens|heat4/bg]    34K[-/bg] [tokens|heat4/bg]    1.3M[-/bg] [cost|mid/bg/b]      $2.07[-/bg] [cost|mid/bg]━━━━━━━[empty/bg]━━━━━━━━━━━[-/bg] [mute/bg] 0.9×[-/bg] [fg/bg]gpt-5.6-sol      [-/bg] [mute/bg]codex, work                 
[-/bg] [fg/bg]Sun Nov 8 [-/bg] [tokens|heat4/bg]    40K[-/bg] [tokens|heat4/bg]    29K[-/bg] [tokens|heat4/bg]    914K[-/bg] [cost|mid/bg/b]      $1.32[-/bg] [cost|mid/bg]━━━━━[empty/bg]━━━━━━━━━━━━━[-/bg] [mute/bg] 0.6×[-/bg] [fg/bg]gpt-5.6-sol      [-/bg] [mute/bg]codex, personal             
[-/bg] [rule/bg]───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[-/bg] [mute/bg]179 days  [-/bg] [tokens|heat4/bg]  13.2M[-/bg] [tokens|heat4/bg]   6.1M[-/bg] [tokens|heat4/bg]  239.0M[-/bg] [cost|mid/bg/b]   $285.03*[-/bg]                    [-/bg]     [-/bg] [-/bg]                 [-/bg] [-/bg]                            
[border/bg]────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[-/bg] [head/bg/b]1-4[dim/bg] views   [head/bg/b]d/w/m[dim/bg] group   [head/bg/b]/[dim/bg] filter   [head/bg/b]W/M[dim/bg] this week/month   [head/bg/b]a[dim/bg] account   [head/bg/b]s[dim/bg] settings   [head/bg/b]?[dim/bg] help   [head/bg/b]q[dim/bg] quit   [-/bg]  [dim/bg]MCP [live/bg]●[dim/bg] 2 agents "
`;
